--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
       content="react,material,kit,application,dashboard,admin,template"
     />
     <meta name="author" content="Feed IO" />
+
+    <!-- for plotly/charts -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
