--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" 
-      rel="stylesheet"
-    >
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Feed</title>
-    <meta
-      name="description"
-      content="A professional kit that comes with ready-to-use Material-UI© components developed with one common goal in mind, help you build faster &amp; beautiful applications. Each component is fully customizable, responsive and easy to integrate."
+    <meta name="description" content="A professional kit that comes with ready-to-use Material-UI© components developed with one common goal in mind, help you build faster &amp; beautiful applications. Each component is fully customizable, responsive and easy to integrate."
     />
-    <meta
-      name="keywords"
-      content="react,material,kit,application,dashboard,admin,template"
-    />
+    <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
     <meta name="author" content="Feed IO" />
 
     <!-- for plotly/charts -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  </head>
-  <body>
+    <script src="https://kit.fontawesome.com/2c60e8eb85.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
